YARN-316: fix path calculations for wildcard jars